src/tests/invalidframingconfig/data/frameancestorsselfnoxfosameorigin.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
CSP frame-ancestors 'self' is set but X-Frame-Options SAME-ORIGIN is not.